# citibikeRL

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: README.md  dataset.yaml  dqn_training.yaml  environment.yaml  evaluation.yaml  training.yaml
data/processed/: hourly_flows.csv  jc_202501_hourly_flows.csv  jc_202502_hourly_flows.csv  jc_202503_hourly_flows.csv  jc_202504_hourly_flows.csv  jc_202505_hourly_flows.csv  jc_202506_hourly_flows.csv  jc_202507_hourly_flows.csv  jc_202508_hourly_flows.csv  jc_202509_hourly_flows.csv  jc_202510_hourly_flows.csv  jc_202511_hourly_flows.csv  jc_202512_hourly_flows.csv  jc_202601_hourly_flows.csv
data/raw/: JC-202501-citibike-tripdata.csv.zip.metadata.json  JC-202502-citibike-tripdata.csv.zip.metadata.json  JC-202503-citibike-tripdata.csv.zip.metadata.json  README.md  (+11 more)
docs/: MERGE_CONFLICT_TROUBLESHOOTING.md  NEXT_STEPS.md  REPOSITORY_GUIDE.md  STATUS.md  WORKFLOW.md
notebooks/: 01_data_overview.ipynb  README.md
outputs/: README.md
scripts/: README.md  check_conflicts.sh  check_structure.sh  evaluate_baseline.py  evaluate_saved_dqn.py  evaluate_saved_policy.py  get_dataset.py  get_weather_data.py  make_plots.py  make_technical_report_figures.py  new_meeting_note.sh  new_report_draft.sh  preprocess_data.py  run_experiment.py  train_dqn.py  train_q_learning.py  validate_dataset.py
tests/: README.md  test_data_validation.py  test_dataset_scripts.py  test_dqn.py  test_experiment.py  test_imports.py  test_model_io.py  test_q_learning.py  test_rebalancing_data.py  test_rebalancing_env.py  test_reporting.py
(+50 files in other folders)
